# crewai-gmail-automation

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  agentic-mail-manager-firebase-adminsdk-fbsvc-645d5291df.json  pyproject.toml
docs/: API.md  DEPLOY_GCP_FIREBASE.md  WEB_APP.md  deploy-vertex.md  openapi.yaml
scripts/: create_github_repo.sh  deploy.sh  update-openapi-url.sh
src/gmail_crew_ai/: crew.py  models.py  server.py
src/gmail_crew_ai/config/: agents.yaml  tasks.yaml
src/gmail_crew_ai/tools/: gmail_tools.py
src/web/: app.js  firebase.js  index.html  styles.css
